--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,4 +21,4 @@ jobs:
       with:
         dotnet-version: 5.0.x
     - name: Build
-      run: dotnet build --configuration $(buildConfiguration)
+      run: dotnet build --configuration $buildConfiguration
