--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,3 +22,5 @@ jobs:
         dotnet-version: 5.0.x
     - name: Build
       run: dotnet build --configuration $buildConfiguration
+    - name: Test
+      run: dotnet test
